Agregue posicionamiento a los cubos :D

--- a/sesion4/index.html
+++ b/sesion4/index.html
@@ -10,13 +10,23 @@
 <body>
     <h1>Hola Koders, esta es la sesión 4</h1>
 
-    <div class="div div__block-examples">
+    <!-- <div class="div div__block-examples">
         <div class="div div__static--yellow"></div>
         <div class="div div__relative--hotpink"></div>
-        <div class="div div__fixed--blue"></div>
+        <div class="div div__fixed--blue">Chat de soporte</div>
         <div class="div div__absolute--red"></div>
         <div class="div div__sticky--peru"></div>
+    </div> -->
+
+    <div class="div div__block-z-index">
+        <button class="button button__z-index">Click me :)</button>
+        <img src="https://picsum.photos/id/237/200/300" alt="#" class="img img__z-index">
+        <div class="div div__block-text">
+            <h2>Texto bonito</h2>
+            <p class="p p__z-index--white">Texto bonito que no es h2</p>
+        </div>
     </div>
+
 
 </body>
 </html>
