--- a/sesion5/index.html
+++ b/sesion5/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Hola Koders, esta es la sesión 5</h1>
+    <!-- <h1>Hola Koders, esta es la sesión 5</h1>
     <div class="div div__key-frames">
         <button class="button button__key-frames button__key-frames--hotpink">
             Koders 22JS
@@ -19,6 +19,15 @@
         <button class="button button__ease-in button__ease-in--green">Click me please!</button>
         <button class="button button__ease button__ease--hotpink">Click me please!</button>
         <button class="button button__ease-out button__ease-out--yellow">Click me please!</button>
+    </div> -->
+    <div class="div div__display">
+        <div class="div div__card div__card--border-black">
+        </div>
+    </div>
+    <div class="div div__key-frames">
+        <button class="button button__key-frames button__key-frames--hotpink">
+            Koders 22JS
+        </button>
     </div>
 </body>
 </html>
