--- a/p_r/koders.html
+++ b/p_r/koders.html
@@ -52,19 +52,22 @@
     <!-- --card-- -->
     <div class="container mt-5">
         <div class="row">
-            <div class="card col mx-3" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+            <div class="card col mx-3 card__koder" style="width: 18rem;">
+                <div class="d-flex justify-content-center my-2">
+                    <img class="img__koder-photo rounded-circle" src="https://ca.slack-edge.com/TCRFJBKB6-U03RR0HGW2J-da3984cb9a80-192" class="card-img-top" alt="...">
+                </div>
                 <div class="card-body">
                   <h5 class="card-title">Anay Delgado</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <p class="card-text">Koder de la generación 22 de JS - Quiere ser Front-End Dev</p>
+                  <a class="btn"><img class="card__link card__link-linkedin" src="./assets/linkedin.png" alt=""></a>
+                  <a class="btn"><img class="card__link card__link-twitter" src="./assets/gorjeo.png" alt=""></a>
                 </div>
               </div>
               <div class="card col mx-3" style="width: 18rem;">
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Diego el chico nuevo</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Diego, Koder de la generación 22 de JS - Emprendedor de Cacalli.</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
@@ -72,7 +75,7 @@
                 <img src="..." class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Cris, el de la camara apagada</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <p class="card-text">Cris, Koder de la generación 22 de JS - Quiere ser koder pero nunca prende la cámara</p>
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
