--- a/p_r/koders.html
+++ b/p_r/koders.html
@@ -85,7 +85,7 @@
                 </div>
                 <div class="card-body">
                   <h5 class="card-title">Abraham Figueroa</h5>
-                  <p class="card-text">Koder de la generación 22 de JS - Quiere ser Front-End Dev</p>
+                  <p class="card-text">Koder de la generación 22 de JS - También quiere ser Front-End Dev</p>
                   <a class="btn"><img class="card__link card__link-linkedin" src="./assets/linkedin.png" alt=""></a>
                   <a class="btn"><img class="card__link card__link-twitter" src="./assets/gorjeo.png" alt=""></a>
                 </div>
