--- a/p_r/koders.html
+++ b/p_r/koders.html
@@ -63,12 +63,15 @@
                   <a class="btn"><img class="card__link card__link-twitter" src="./assets/gorjeo.png" alt=""></a>
                 </div>
               </div>
-              <div class="card col mx-3" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+              <div class="card col mx-3 card__koder" style="width: 18rem;">
+                <div class="d-flex justify-content-center my-2">
+                    <img class="img__koder-photo rounded-circle" src="./assets/UwOqgbxAQbeY10RKocgquw_thumb_416e.jpg" class="card-img-top" alt="...">
+                </div>
                 <div class="card-body">
-                  <h5 class="card-title">Diego el chico nuevo</h5>
-                  <p class="card-text">Diego, Koder de la generación 22 de JS - Emprendedor de Cacalli.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Sue Enciso</h5>
+                  <p class="card-text">Koder de la generación 22 de JS - Saludos mundo! :) </p>
+                  <a class="btn"><img class="card__link card__link-linkedin" src="./assets/linkedin.png" alt=""></a>
+                  <a class="btn"><img class="card__link card__link-twitter" src="./assets/gorjeo.png" alt=""></a>
                 </div>
               </div>
               <div class="card col mx-3" style="width: 18rem;">
