--- a/p_r/koders.html
+++ b/p_r/koders.html
@@ -79,6 +79,16 @@
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
+              <div class="card col mx-3 card__koder" style="width: 18rem;">
+                <div class="d-flex justify-content-center my-2">
+                    <img class="img__koder-photo rounded-circle" src="./assets/img8.jpg" class="card-img-top" alt="...">
+                </div>
+              <div class="card-body">
+                <h5 class="card-title">Sofia Saldaña</h5>
+                <p class="card-text">Koder de la generación 22 de JS - Quiere ser Back-End ♥</p>
+                <a class="btn"><img class="card__link card__link-linkedin" src="./assets/linkedin.png" alt=""></a>
+                <a class="btn"><img class="card__link card__link-twitter" src="./assets/gorjeo.png" alt=""></a>
+              </div>
         </div>
     </div>
 
