--- a/p_r/koders.html
+++ b/p_r/koders.html
@@ -79,10 +79,23 @@
                   <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
               </div>
+
+              <div class="card col mx-3 card__koder" style="width: 18rem;">
+                <div class="d-flex justify-content-center my-2">
+                    <img class="img__koder-photo rounded-circle" src="https://ca.slack-edge.com/TCRFJBKB6-U03Q1G3J4FP-cedb29a200ab-72" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title">joss</h5>
+                  <p class="card-text">Koder de la generación 22 de JS - Quiere ser Front-End Dev</p>
+                  <a class="btn"><img class="card__link card__link-linkedin" src="./assets/linkedin.png" alt=""></a>
+                  <a class="btn"><img class="card__link card__link-twitter" src="./assets/gorjeo.png" alt=""></a>
+                </div>
+              </div>
+
         </div>
     </div>
 
-
+    
 
 </body>
 
