--- a/p_r/koders.html
+++ b/p_r/koders.html
@@ -142,7 +142,8 @@
           <div class="card-body">
             <h5 class="card-title">Jessica Hernández</h5>
             <p class="card-text">
-              Koder de la generación 22 de JS - Ya sabe cuando poner "flex" 🥳
+              Koder de la generación 22 de JS - Quiere ser frontend y ya sabe
+              cuando poner "flex" 🥳
             </p>
             <a class="btn"
               ><img
