--- a/p_r/koders.html
+++ b/p_r/koders.html
@@ -130,7 +130,7 @@
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
-        <div class="card col mx-3 card__koder" style="width: 18rem">
+        <div class="card col-4 my-3 mx-3 card__koder" style="width: 18rem">
           <div class="d-flex justify-content-center my-2">
             <img
               class="img__koder-photo rounded-circle"
