Adding Alex Card

--- a/p_r/koders.html
+++ b/p_r/koders.html
@@ -111,8 +111,19 @@
                     </div>
                   </div>
             </div>
-
-
+            <div class="col-4">
+              <div class="card card__koder my-3" style="width: 18rem;">
+                  <div class="d-flex justify-content-center my-2">
+                      <img class="img__koder-photo rounded-circle" src="https://ca.slack-edge.com/TCRFJBKB6-UCSP1EZKR-315f3539d375-72" class="card-img-top" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Alejandro Martínez</h5>
+                    <p class="card-text">Koder de la generación 22 de JS</p>
+                    <a class="btn"><img class="card__link card__link-linkedin" src="./assets/linkedin.png" alt=""></a>
+                    <a class="btn"><img class="card__link card__link-twitter" src="./assets/gorjeo.png" alt=""></a>
+                  </div>
+                </div>
+          </div>
         </div>
     </div>
 
